force-app/main/default/objects/Unit__c/Unit__c.object-meta.xml
<CustomObject>
    <description>Unit EG: Rig 12 Unit or  Camp 3 Unit
Think of its locations</description>
    <label>Unit</label>
    <nameField>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>