force-app/main/default/objects/Unit__c/fields/Account_Brand__c.field-meta.xml
<CustomField>
    <fullName>Account_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>