force-app/main/default/objects/Unit__c/fields/Average_Fuel_Used__c.field-meta.xml
<CustomField>
    <fullName>Average_Fuel_Used__c</fullName>
    <label>Average Fuel Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>