force-app/main/default/objects/Unit__c/fields/Base_Store__c.field-meta.xml
<CustomField>
    <fullName>Base_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base Store</label>
    <type>Checkbox</type>
</CustomField>