force-app/main/default/objects/Unit__c/fields/Business_Operations_Officer__c.field-meta.xml
<CustomField>
    <fullName>Business_Operations_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Operations Officer</description>
    <label>Business Operations Officer</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Unit (Business Operations Officer)</relationshipLabel>
    <relationshipName>BOO</relationshipName>
    <type>Lookup</type>
</CustomField>