force-app/main/default/objects/Unit__c/fields/By_pass_Ordering__c.field-meta.xml
<CustomField>
    <fullName>By_pass_Ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If non-inventory item and available in source store, by pass the ordering and proceed with pick list.</inlineHelpText>
    <label>Bypass Ordering</label>
    <type>Checkbox</type>
</CustomField>