force-app/main/default/objects/Unit__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>/*Site__r.Account__r.Name*/
 Contract_New__r.Account__r.Name</formula>
    <label>Client</label>
    <type>Text</type>
</CustomField>