force-app/main/default/objects/Unit__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <formula>Contract_New__r.Account__c</formula>
    <label>ClientId</label>
    <type>Text</type>
</CustomField>