force-app/main/default/objects/Unit__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract # (Old)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>