force-app/main/default/objects/Unit__c/fields/Contract_New__c.field-meta.xml
<CustomField>
    <fullName>Contract_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract #</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>