force-app/main/default/objects/Unit__c/fields/Cost_Allocation_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Allocation_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked, this unit will be selectable in the Cost Allocation Unit for Purchase Units</inlineHelpText>
    <label>Cost Allocation Unit</label>
    <type>Checkbox</type>
</CustomField>