force-app/main/default/objects/Unit__c/fields/Date_Last_ndt__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_ndt__c</fullName>
    <inlineHelpText>When specified, NDT hours are computed from this date onwards. If blank, it counts all NDT hours for this Unit</inlineHelpText>
    <label>NDT Start Date</label>
    <type>Date</type>
</CustomField>