force-app/main/default/objects/Unit__c/fields/Destination_Unit__c.field-meta.xml
<CustomField>
    <fullName>Destination_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to include as destination unit in purchase request.</inlineHelpText>
    <label>Destination Unit</label>
    <type>Checkbox</type>
</CustomField>