force-app/main/default/objects/Unit__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>30</length>
    <type>Text</type>
</CustomField>