force-app/main/default/objects/Unit__c/fields/Existing_LTI_Days__c.field-meta.xml
<CustomField>
    <fullName>Existing_LTI_Days__c</fullName>
    <label>Existing LTI Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>