force-app/main/default/objects/Unit__c/fields/Fuel_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Delivered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fuel Delivered</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>