force-app/main/default/objects/Unit__c/fields/Fuel_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Fuel_On_Hand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fuel On Hand</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>