force-app/main/default/objects/Unit__c/fields/Last_CIII__c.field-meta.xml
<CustomField>
    <fullName>Last_CIII__c</fullName>
    <label>Date Last CIII</label>
    <type>Date</type>
</CustomField>