force-app/main/default/objects/Unit__c/fields/Last_NDT_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Last_NDT_Inspection__c</fullName>
    <label>Last NDT Inspection</label>
    <type>Date</type>
</CustomField>