force-app/main/default/objects/Unit__c/fields/LTI__c.field-meta.xml
<CustomField>
    <fullName>LTI__c</fullName>
    <label>LTI</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>