force-app/main/default/objects/Unit__c/fields/LTI_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>LTI_Reset_Date__c</fullName>
    <description>When the LTI field is changed back to zero the LTI Date will automatically reset to the day this happened</description>
    <label>LTI Reset Date</label>
    <type>Date</type>
</CustomField>