force-app/main/default/objects/Unit__c/fields/NDT_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>NDT_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking if auto-email notification has been sent for NDT greater than 3800 hours</description>
    <label>NDT Email Sent</label>
    <type>Checkbox</type>
</CustomField>