force-app/main/default/objects/Unit__c/fields/NDT_Hours__c.field-meta.xml
<CustomField>
    <fullName>NDT_Hours__c</fullName>
    <description>Auto-populated by the Daily Job Item Trigger</description>
    <inlineHelpText>Auto-populated by the Daily Job Item Trigger</inlineHelpText>
    <label>NDT Hours</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>