force-app/main/default/objects/Unit__c/fields/NDT_Hours_Life_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>NDT_Hours_Life_of_Asset__c</fullName>
    <description>Auto-populated by the Daily Job Item Trigger.  Does not reset after NDT inspection</description>
    <inlineHelpText>Auto-populated by the Daily Job Item Trigger. Does not reset after NDT inspection</inlineHelpText>
    <label>NDT Hours - Life of Asset</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>