force-app/main/default/objects/Unit__c/fields/NDT_Hours_Old__c.field-meta.xml
<CustomField>
    <fullName>NDT_Hours_Old__c</fullName>
    <description>Field created to manually log previous NDT Hours for a Unit</description>
    <inlineHelpText>Field created to manually log previous NDT Hours for a Unit</inlineHelpText>
    <label>NDT Hours (Old)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>