force-app/main/default/objects/Unit__c/fields/NDT_Hours_Total__c.field-meta.xml
<CustomField>
    <fullName>NDT_Hours_Total__c</fullName>
    <description>Formula field which adds NDT Hours and NDT Hours (Old)</description>
    <formula>NDT_Hours__c + NDT_Hours_Old__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field which adds NDT Hours and NDT Hours (Old)</inlineHelpText>
    <label>NDT Hours (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>