force-app/main/default/objects/Unit__c/fields/Next_CIII_Required_Op_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Next_CIII_Required_Op_Hrs__c</fullName>
    <label>Next NDT Due (Op Hrs)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>