force-app/main/default/objects/Unit__c/fields/Next_CIV_Required_Op_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Next_CIV_Required_Op_Hrs__c</fullName>
    <label>Next CIV Required (Op Hrs)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>