force-app/main/default/objects/Unit__c/fields/Next_Crew_Change__c.field-meta.xml
<CustomField>
    <fullName>Next_Crew_Change__c</fullName>
    <label>Next Crew Change</label>
    <type>Date</type>
</CustomField>