force-app/main/default/objects/Unit__c/fields/Next_NDT_Type__c.field-meta.xml
<CustomField>
    <fullName>Next_NDT_Type__c</fullName>
    <label>Next NDT (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIII</fullName>
            </value>
            <value>
                <fullName>CIV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>