force-app/main/default/objects/Unit__c/fields/Number_of_Hours_to_Next_NDT__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_to_Next_NDT__c</fullName>
    <formula>8760 - NDT_Hours__c</formula>
    <label>Number of Hours to Next NDT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>