force-app/main/default/objects/Unit__c/fields/Parent_WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>Parent_WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>