force-app/main/default/objects/Unit__c/fields/PR_PO_Admin__c.field-meta.xml
<CustomField>
    <fullName>PR_PO_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PR/PO Admin</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>