force-app/main/default/objects/Unit__c/fields/PR_PO_Admin_Name__c.field-meta.xml
<CustomField>
    <fullName>PR_PO_Admin_Name__c</fullName>
    <formula>PR_PO_Admin__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR/PO Admin Name</label>
    <type>Text</type>
</CustomField>