force-app/main/default/objects/Unit__c/fields/Purchase_Request_Approver__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Request_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Request Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Request_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>