force-app/main/default/objects/Unit__c/fields/Sat_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone__c</fullName>
    <label>Sat Phone #</label>
    <type>Phone</type>
</CustomField>