force-app/main/default/objects/Unit__c/fields/site_text__c.field-meta.xml
<CustomField>
    <fullName>site_text__c</fullName>
    <formula>Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>site text</label>
    <type>Text</type>
</CustomField>