force-app/main/default/objects/Unit__c/fields/Source_Store__c.field-meta.xml
<CustomField>
    <fullName>Source_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If by pass ordering, specify the source store to pick list stocks.</inlineHelpText>
    <label>Source Store</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit (Source Store)</relationshipLabel>
    <relationshipName>Unit1</relationshipName>
    <type>Lookup</type>
</CustomField>