force-app/main/default/objects/Unit__c/fields/Third_Approver_Limit__c.field-meta.xml
<CustomField>
    <fullName>Third_Approver_Limit__c</fullName>
    <label>Third Approver Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>