force-app/main/default/objects/Unit__c/fields/Total_Op_Hours_from_Last_CIV_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Op_Hours_from_Last_CIV_Date__c</fullName>
    <label>Total Op Hours (from Last CIV Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>