force-app/main/default/objects/Unit__c/fields/Unit_Manager__c.field-meta.xml
<CustomField>
    <fullName>Unit_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Unit Manager also controls Transport Jobs Mgmt.</inlineHelpText>
    <label>Unit Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>