force-app/main/default/objects/Unit__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <inlineHelpText>Field Camp/Rig - purpose built for contract
Base - Permanent building/Camp 
Department - section of business that may require identifying for expense purposes</inlineHelpText>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qld Depot</fullName>
                <label>Qld - Depot</label>
            </value>
            <value>
                <fullName>Camp - Qld</fullName>
                <label>Qld - Camp</label>
            </value>
            <value>
                <fullName>Rig - Qld</fullName>
                <label>Qld - Rig</label>
            </value>
            <value>
                <fullName>Depot - Roma</fullName>
                <label>SA - Depot</label>
            </value>
            <value>
                <fullName>Camp - SA</fullName>
                <label>SA - Camp</label>
            </value>
            <value>
                <fullName>Rig - SA</fullName>
                <label>SA - Rig</label>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Field - Rig</fullName>
            </value>
            <value>
                <fullName>Field - Camp</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>