force-app/main/default/objects/Unit__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <formula>IF(CONTAINS(TEXT(Unit_Type__c),&apos;Rig&apos;),&apos;Rig&apos;,
IF(CONTAINS(TEXT(Unit_Type__c),&apos;Camp&apos;),&apos;Camp&apos;,
IF(CONTAINS(TEXT(Unit_Type__c),&apos;Transport&apos;),&apos;Transport&apos;,&apos;&apos;)))</formula>
    <label>UnitType</label>
    <type>Text</type>
</CustomField>