force-app/main/default/objects/Unit__c/validationRules/ByPassOrdering_SourceStoreRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ByPassOrdering_SourceStoreRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   By_pass_Ordering__c = TRUE,
   ISBLANK( Source_Store__c ) 
)</errorConditionFormula>
    <errorDisplayField>Source_Store__c</errorDisplayField>
    <errorMessage>Source Store is required if Bypass Ordering is ticked.</errorMessage>
</ValidationRule>