force-app/main/default/objects/Unit__c/validationRules/Manager_is_required_for_Rig_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_is_required_for_Rig_Unit</fullName>
    <active>false</active>
    <errorConditionFormula>AND(UnitType__c = &apos;Rig&apos;,ISBLANK( Manager__c ))</errorConditionFormula>
    <errorDisplayField>Manager__c</errorDisplayField>
    <errorMessage>A Manager must be assigned to a Rig Unit.</errorMessage>
</ValidationRule>