force-app/main/default/objects/Unit__c/listViews/All_Camps.listView-meta.xml
<ListView>
    <fullName>All_Camps</fullName>
    <columns>Unit_Type__c</columns>
    <columns>NAME</columns>
    <columns>Destination_Unit__c</columns>
    <columns>Base_Store__c</columns>
    <columns>Cost_Allocation_Unit__c</columns>
    <columns>Unit_Manager__c</columns>
    <columns>Manager__c</columns>
    <columns>Purchase_Request_Approver__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Camp</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled Start,Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unit__c.Location</value>
    </filters>
    <label>All Camps</label>
</ListView>