force-app/main/default/objects/Unit__c/listViews/All_Rigs_Approvers.listView-meta.xml
<ListView>
    <fullName>All_Rigs_Approvers</fullName>
    <columns>Unit_Type__c</columns>
    <columns>NAME</columns>
    <columns>Unit_Manager__c</columns>
    <columns>Manager__c</columns>
    <columns>Purchase_Request_Approver__c</columns>
    <columns>First_Approver__c</columns>
    <columns>First_Approver_Limit__c</columns>
    <columns>Second_Approver__c</columns>
    <columns>Second_Approver_Limit__c</columns>
    <columns>Third_Approver__c</columns>
    <columns>Third_Approver_Limit__c</columns>
    <columns>Fourth_Approver__c</columns>
    <columns>Fourth_Approver_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Type__c</field>
        <operation>contains</operation>
        <value>Qld - Rig,SA - Rig</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unit__c.Location</value>
    </filters>
    <label>All | Rigs Approvals</label>
    <sharedTo>
        <group>BOO</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>