force-app/main/default/objects/Unit__c/listViews/Copy_of_All_department.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_department</fullName>
    <columns>NAME</columns>
    <columns>Destination_Unit__c</columns>
    <columns>Cost_Allocation_Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Unit_Manager__c</columns>
    <columns>Manager__c</columns>
    <columns>Purchase_Request_Approver__c</columns>
    <columns>First_Approver__c</columns>
    <columns>First_Approver_Limit__c</columns>
    <columns>Second_Approver__c</columns>
    <columns>Second_Approver_Limit__c</columns>
    <columns>Third_Approver__c</columns>
    <columns>Third_Approver_Limit__c</columns>
    <columns>Fourth_Approver__c</columns>
    <columns>Fourth_Approver_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Type__c</field>
        <operation>contains</operation>
        <value>Department</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unit__c.Location</value>
    </filters>
    <label>All | Departments Approvals</label>
    <sharedTo>
        <group>BOO</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>