force-app/main/default/objects/Unit__c/listViews/Cost_Allocation_Units.listView-meta.xml
<ListView>
    <fullName>Cost_Allocation_Units</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Request_Approver__c</columns>
    <columns>Unit_Manager__c</columns>
    <columns>Manager__c</columns>
    <columns>Destination_Unit__c</columns>
    <columns>Cost_Allocation_Unit__c</columns>
    <columns>Source_Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unit__c.Location</value>
    </filters>
    <filters>
        <field>Cost_Allocation_Unit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cost Allocation Units</label>
</ListView>